--- a/src/dk/via/view/addPallet.fxml
+++ b/src/dk/via/view/addPallet.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.4" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.via.Controller.ViewControllers.AddPalletController">
+<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/9.0.4" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.via.Controller.ViewControllers.AddPalletController">
     <children>
-        <VBox alignment="CENTER" layoutX="77.0" layoutY="23.0" prefHeight="355.0" prefWidth="447.0" spacing="40.0">
+        <VBox alignment="TOP_CENTER" layoutX="77.0" layoutY="23.0" prefHeight="355.0" prefWidth="447.0" spacing="40.0" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="300.0" AnchorPane.rightAnchor="300.0" AnchorPane.topAnchor="20.0">
             <children>
                 <Label text="Add new Pallet to system">
                     <font>
@@ -55,7 +55,7 @@
                                 <Insets right="20.0" />
                             </padding>
                         </Label>
-                        <TextField fx:id="vinNoTF" GridPane.columnIndex="1">
+                        <TextField fx:id="idTF" GridPane.columnIndex="1">
                             <GridPane.margin>
                                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                             </GridPane.margin>
@@ -63,7 +63,7 @@
                                 <Font size="16.0" />
                             </font>
                         </TextField>
-                        <TextField fx:id="modelTF" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <TextField fx:id="capacityTF" GridPane.columnIndex="1" GridPane.rowIndex="1">
                             <font>
                                 <Font size="16.0" />
                             </font>
@@ -73,7 +73,7 @@
                         </TextField>
                     </children>
                 </GridPane>
-                <Button fx:id="registerBtn" mnemonicParsing="false" onAction="#registerCarPart" style="-fx-background-color: #2ECC71 #2ECC71;" text="Register" textFill="WHITE">
+                <Button fx:id="addBtn" mnemonicParsing="false" onAction="#addPallet" style="-fx-background-color: #2ECC71 #2ECC71;" text="Register" textFill="WHITE">
                     <padding>
                         <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
                     </padding>
